InviteForm: fix alignment

--- a/web/src/org/invite/InviteForm.scss
+++ b/web/src/org/invite/InviteForm.scss
@@ -18,7 +18,7 @@
 .invited-notification {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
 
     &__message {
         flex: 1;
